# dont-ptrace-me

./: Cargo.toml  README.md
scripts/: test_individual_features.sh  test_with_gdb.sh  test_with_strace.sh
src/: detect_breakpoint.rs  detect_procfs.rs  detect_ptrace.rs  lib.rs  main.rs
tests/: test_breakpoint.rs  test_procfs.rs  test_ptrace.rs
